Integrationstests added for Blacklist and ContractCustomer