@@ -37,12 +37,12 @@ class CustomerServiceImplTest {
 
     private final Customer customer = new Customer(id,name,ssn,email, new ArrayList<>());
 
-    private final CustomerDTO customerDTO = new CustomerDTO().builder()
+    private final CustomerDTO customerDTO = CustomerDTO.builder()
             .id(customer.getId()).name(customer.getName())
             .ssn(customer.getSsn()).email(customer.getEmail())
             .bookings(new ArrayList<>()).build();
 
-    private final CustomerLiteDTO customerLiteDTO = new CustomerLiteDTO().builder()
+    private final CustomerLiteDTO customerLiteDTO = CustomerLiteDTO.builder()
             .id(customer.getId()).name(customer.getName())
             .ssn(customer.getSsn()).email(customer.getEmail()).build();
 
@@ -88,7 +88,7 @@ class CustomerServiceImplTest {
 
     @Test
     void findAllCustomers() {
-        when(repo.findAll()).thenReturn(Arrays.asList(customer));
+        when(repo.findAll()).thenReturn(List.of(customer));
         CustomerServiceImpl serv = new CustomerServiceImpl(repo);
 
         List<CustomerDTO> allCustomers = serv.findAllCustomers();
